chapter1-Q4

Scope

fn main() {
    {
        let a = 10;
    }
    println!("{}",a);
}

o/p:
error[E0425]: cannot find value `a` in this scope
 --> src/main.rs:5:19
  |
5 |     println!("{}",a);
  |                   ^


//Shadowing

fn main() {
    let a = 20;
    {
        let a = 10;
        println!("inner scope {}",a);
    }
    println!("Shadowing {}",a);
}

o/p:
inner scope 10
Shadowing 20
